// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaTeX Plugin testcase: should render block LaTeX with $$..$$ syntax 1`] = `
<div>
  <div>
    <p>
      This is an block LaTeX: 
    </p>
    <p>
      <span
        class="katex"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi
                mathvariant="normal"
              >
                Δ
              </mi>
              <msup>
                <mi>
                  t
                </mi>
                <mo
                  lspace="0em"
                  mathvariant="normal"
                  rspace="0em"
                >
                  ′
                </mo>
              </msup>
              <mo>
                =
              </mo>
              <mfrac>
                <mrow>
                  <mi
                    mathvariant="normal"
                  >
                    Δ
                  </mi>
                  <mi>
                    t
                  </mi>
                </mrow>
                <msqrt>
                  <mrow>
                    <mn>
                      1
                    </mn>
                    <mo>
                      −
                    </mo>
                    <mfrac>
                      <msup>
                        <mi>
                          v
                        </mi>
                        <mn>
                          2
                        </mn>
                      </msup>
                      <msup>
                        <mi>
                          c
                        </mi>
                        <mn>
                          2
                        </mn>
                      </msup>
                    </mfrac>
                  </mrow>
                </msqrt>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\Delta t' = \\frac{\\Delta t}{\\sqrt{1 - \\frac{v^2}{c^2}}}
            </annotation>
          </semantics>
        </math>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render block LaTeX with \\[..\\] syntax 1`] = `
<div>
  <div>
    <p>
      This is an block LaTeX: 
    </p>
    <pre>
      <code>
          \\[
      </code>
    </pre>
    <p>
      \\Delta t' = \\frac{\\Delta t}{\\sqrt{1 - \\frac{v^2}{c^2}}}
]
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render inline LaTeX with $..$ syntax 1`] = `
<div>
  <div>
    <h3>
      Latex
    </h3>
    <p>
      inline standard: 
      <span
        class="katex"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mfrac>
                <mrow>
                  <mi>
                    d
                  </mi>
                  <mi>
                    f
                  </mi>
                </mrow>
                <mrow>
                  <mi>
                    d
                  </mi>
                  <mi>
                    t
                  </mi>
                </mrow>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{df}{dt}
            </annotation>
          </semantics>
        </math>
      </span>
    </p>
    <p>
      block standard：
    </p>
    <span
      class="katex"
    >
      <math
        display="block"
        xmlns="http://www.w3.org/1998/Math/MathML"
      >
        <semantics>
          <mrow>
            <mi
              mathvariant="normal"
            >
              Δ
            </mi>
            <msup>
              <mi>
                t
              </mi>
              <mo
                lspace="0em"
                mathvariant="normal"
                rspace="0em"
              >
                ′
              </mo>
            </msup>
            <mo>
              =
            </mo>
            <mfrac>
              <mrow>
                <mi
                  mathvariant="normal"
                >
                  Δ
                </mi>
                <mi>
                  t
                </mi>
              </mrow>
              <msqrt>
                <mrow>
                  <mn>
                    1
                  </mn>
                  <mo>
                    −
                  </mo>
                  <mfrac>
                    <msup>
                      <mi>
                        v
                      </mi>
                      <mn>
                        2
                      </mn>
                    </msup>
                    <msup>
                      <mi>
                        c
                      </mi>
                      <mn>
                        2
                      </mn>
                    </msup>
                  </mfrac>
                </mrow>
              </msqrt>
            </mfrac>
          </mrow>
          <annotation
            encoding="application/x-tex"
          >
            \\Delta t' = \\frac{\\Delta t}{\\sqrt{1 - \\frac{v^2}{c^2}}}
          </annotation>
        </semantics>
      </math>
    </span>
    <p>
      inline: 
      <span
        class="katex"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mfrac>
                <mrow>
                  <mi>
                    d
                  </mi>
                  <mi>
                    f
                  </mi>
                </mrow>
                <mrow>
                  <mi>
                    d
                  </mi>
                  <mi>
                    t
                  </mi>
                </mrow>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{df}{dt}
            </annotation>
          </semantics>
        </math>
      </span>
    </p>
    <p>
      block: 
    </p>
    <span
      class="katex"
    >
      <math
        display="block"
        xmlns="http://www.w3.org/1998/Math/MathML"
      >
        <semantics>
          <mrow>
            <mi
              mathvariant="normal"
            >
              Δ
            </mi>
            <msup>
              <mi>
                t
              </mi>
              <mo
                lspace="0em"
                mathvariant="normal"
                rspace="0em"
              >
                ′
              </mo>
            </msup>
            <mo>
              =
            </mo>
            <mfrac>
              <mrow>
                <mi
                  mathvariant="normal"
                >
                  Δ
                </mi>
                <mi>
                  t
                </mi>
              </mrow>
              <msqrt>
                <mrow>
                  <mn>
                    1
                  </mn>
                  <mo>
                    −
                  </mo>
                  <mfrac>
                    <msup>
                      <mi>
                        v
                      </mi>
                      <mn>
                        2
                      </mn>
                    </msup>
                    <msup>
                      <mi>
                        c
                      </mi>
                      <mn>
                        2
                      </mn>
                    </msup>
                  </mfrac>
                </mrow>
              </msqrt>
            </mfrac>
          </mrow>
          <annotation
            encoding="application/x-tex"
          >
            \\Delta t' = \\frac{\\Delta t}{\\sqrt{1 - \\frac{v^2}{c^2}}}
          </annotation>
        </semantics>
      </math>
    </span>
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render inline LaTeX with \\(..\\) syntax 1`] = `
<div>
  <div>
    <p>
      This is an inline LaTeX: 
      <span
        class="katex"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                E
              </mi>
              <mo>
                =
              </mo>
              <mi>
                m
              </mi>
              <msup>
                <mi>
                  c
                </mi>
                <mn>
                  2
                </mn>
              </msup>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              E=mc^2
            </annotation>
          </semantics>
        </math>
      </span>
    </p>
  </div>
</div>
`;
